<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encdroid</string>
    <string name="file">File</string>
    <string name="volume">Volume</string>
    <string name="menu_import_vol">Import Volume</string>
    <string name="menu_settings">Settings</string>
    <string name="no_volumes">No EncFS volumes configured. Choose \&quot;Import Volume\&quot; or \&quot;Create Volume\&quot;  from the menu to add volumes.</string>
    <string name="menu_select">Select</string>
    <string name="pwd_dialog_title_str">Enter password:</string>
    <string name="btn_ok_str">OK</string>
    <string name="pbkdf_dialog_title_str">Deriving password key</string>
    <string name="pbkdf_dialog_msg_str">Can take VERY long for some volumes. Consider enabling password key caching in Settings.</string>
    <string name="btn_cancel_str">Cancel</string>
    <string name="voladd_dialog_title_str">Enter volume name:</string>
    <string name="incorrect_pwd_str">Incorrect password supplied</string>
    <string name="toast_cut_file">Cut %s</string>
    <string name="toast_copy_file">Copied %s</string>
    <string name="toast_files_exported">File(s) exported\&#8230;</string>
    <string name="toast_files_imported">File(s) imported\&#8230;</string>
    <string name="toast_encrypt_file">Encrypted file \'%s\'</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="save_pass_invalid_str">Saved password failed checksum test and was discarded.</string>
    <string name="save_pass_title_str">Save passwords</string>
    <string name="save_pass_sum_str">Cache the result of password-based key derivation function for faster access to volumes</string>
    <string name="decrypt_dialog_title_str">Decrypting \'%s\'</string>
    <string name="frename_dialog_title_str">Enter new file name:</string>
    <string name="encrypt_dialog_title_str">Encrypting \'%s\'</string>
    <string name="menu_import_files">Import Files</string>
    <string name="import_dialog_title_str">Importing %s</string>
    <string name="import_dialog_msg_str">Importing %s</string>
    <string name="btn_yes_str">Yes</string>
    <string name="btn_no_str">No</string>
    <string name="del_dialog_title_str">Are you sure you want to delete %s ?</string>
    <string name="menu_newfolder">Create Folder</string>
    <string name="mkdir_dialog_input_str">Enter folder name:</string>
    <string name="error_rename_fail">Failed to rename \'%1$s\' to \'%2$s\'</string>
    <string name="error_mkdir_fail">Failed to create directory \'%s\'</string>
    <string name="error_delete_fail">Failed to delete \'%s\'</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_cut">Cut</string>
    <string name="error_move_fail">Failed to move \'%1$s\' to \'%2$s\'</string>
    <string name="menu_copy">Copy</string>
    <string name="error_copy_fail">Failed to copy \'%1$s\' to \'%2$s\'</string>
    <string name="copy_dialog_title_str">Copying file(s)</string>
    <string name="copy_dialog_msg_str">Copying %s</string>
    <string name="cut_dialog_title_str">Moving file(s)</string>
    <string name="cut_dialog_msg_str">Moving %s</string>
    <string name="menu_export">Export</string>
    <string name="menu_export_sd">Export to Device</string>
    <string name="export_dialog_title_str">Exporting %s</string>
    <string name="export_dialog_msg_str">Exporting %s</string>
    <string name="error_file_exists">File \'%s\' already exists</string>
    <string name="menu_create_vol">Create Volume</string>
    <string name="mkvol_dialog_title_str">Creating Volume \'%s\'</string>
    <string name="delvol_dialog_title_str">Deleting Volume \'%s\'</string>
    <string name="error_dir_not_found">Directory \'%s\' not found</string>
    <string name="no_files">There are no files here yet. Select \&quot;Import File\&quot; from the menu to add files.</string>
    <string name="mkdir_dialog_title_str">Creating directory \'%s\'</string>
    <string name="rename_dialog_title_str">Renaming \'%1$s\' to \'%2$s\'</string>
    <string name="delete_dialog_title_str">Deleting %s</string>
    <string name="delete_dialog_msg_str">Deleting %s</string>
    <string name="error_no_sd_card">SD card not available!</string>
    <string name="error_sd_readonly">Can\'t write to SD card!</string>
    <string name="error_path_exists">Path \'%s\' already exists!</string>
    <string name="error_no_viewer_app">No application found to open \'%s\'</string>
    <string name="menu_lock_volume">Lock Volume</string>
    <string name="menu_unlock_volume">Unlock Volume</string>
    <string name="menu_import">Import</string>
    <string name="fs_type_dialog_title_str">Choose volume location</string>
    <string name="fs_name_local">Local</string>
    <string name="fs_name_ext_sd">External SD</string>
    <string name="menu_refresh">Refresh</string>
    <string name="account_login_error">Failed to login to %s account</string>
    <string name="accounts">Accounts</string>
    <string name="dropbox">Dropbox</string>
    <string name="account_status">Status:</string>
    <string name="account_username">Username:</string>
    <string name="account_linked">Account linked to \'%s\'</string>
    <string name="account_not_linked">Not linked to any account</string>
    <string name="account_logged_in">Logged in as \'%s\'</string>
    <string name="account_link_btn_str">Link to an account</string>
    <string name="account_unlink_btn_str">Click to unlink account</string>
    <string name="export_file">Exporting %s</string>
    <string name="settings">Settings</string>
    <string name="volume_list">Volume List</string>
    <string name="loading_contents">Loading contents</string>
    <string name="unlocking_volume">Unlocking volume</string>
    <string name="launching_chooser">Launching file chooser</string>
    <string name="paste_fail">Failed to paste file(s)</string>
    <string name="delete_vol_dialog_confirm_str">Are you sure you want to delete volume \'%s\' ?</string>
    <string name="delete_vol_dialog_disk_str">Delete from %s storage</string>
    <string name="auto_import_vol_dialog_str">Import volume at \'%s\' ?</string>
    <string name="choose_config_dialog_str">Choose a config file:</string>
    <string name="browse_config_dialog_str">No encfs config found at \'%s\' \nBrowse for a local config file now?</string>
    <string name="custom_import_str">Custom Import?</string>
    <string name="auto_import_pref_title_str">Auto import volumes</string>
    <string name="auto_import_pref_sum_str">Ask to import volumes when an EncFS configuration file is found</string>
    <string name="ext_sd_enabled_pref_title_str">Enable external SD card</string>
    <string name="ext_sd_enabled_pref_sum_str">Allow storing volumes on the external SD card</string>
    <string name="ext_sd_prefs_title_str">External SD card preferences</string>
    <string name="ext_sd_location_pref_title_str">External SD location</string>
    <string name="ext_sd_location_pref_sum_str">Filesystem path of the external SD card</string>
    <string name="ext_sd_vol_prefix_str">External SD</string>
    <string name="google_drive_login">Logged in to Google Drive</string>
    <string name="google_drive_login_failed">Failed to log in to Google Drive</string>
	<string name="google_drive_no_play_services">Google Play Services not available on device</string>
    <string name="google_drive_no_permissions">Encdroid needs GET_ACCOUNTS (Contacts) permission to access to your Google account</string>
	<string name="multi_select_num_selected">%d selected</string>
	<string name="multi_select_plural_files">%d files</string>
	<string name="dropbox_api_upgrade">Dropbox integration requires re-linking to v2 API</string>
</resources>
